--- a/requirements.txt
+++ b/requirements.txt
@@ -17,13 +17,17 @@ httpcore==1.0.9
 httpx==0.28.1
 huggingface_hub==1.1.5
 idna==3.11
+iniconfig==2.3.0
 multidict==6.7.0
 multiprocess==0.70.18
 numpy==2.3.5
 packaging==25.0
 pandas==2.3.3
+pluggy==1.6.0
 propcache==0.4.1
 pyarrow==22.0.0
+Pygments==2.19.2
+pytest==9.0.1
 python-dateutil==2.9.0.post0
 pytz==2025.2
 PyYAML==6.0.3
