--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,4 @@
+accelerate==1.12.0
 aiohappyeyeballs==2.6.1
 aiohttp==3.13.2
 aiosignal==1.4.0
@@ -15,31 +16,43 @@ h11==0.16.0
 hf-xet==1.2.0
 httpcore==1.0.9
 httpx==0.28.1
-huggingface_hub==1.1.5
+huggingface-hub==0.36.0
 idna==3.11
 iniconfig==2.3.0
+Jinja2==3.1.6
 joblib==1.5.2
+kagglehub==0.3.13
+MarkupSafe==3.0.3
+mpmath==1.3.0
 multidict==6.7.0
 multiprocess==0.70.18
+networkx==3.6
 numpy==2.3.5
 packaging==25.0
 pandas==2.3.3
 pluggy==1.6.0
 propcache==0.4.1
+psutil==7.1.3
 pyarrow==22.0.0
 Pygments==2.19.2
 pytest==9.0.1
 python-dateutil==2.9.0.post0
 pytz==2025.2
 PyYAML==6.0.3
+regex==2025.11.3
 requests==2.32.5
+safetensors==0.7.0
 scikit-learn==1.7.2
 scipy==1.16.3
 shellingham==1.5.4
 six==1.17.0
 sniffio==1.3.1
+sympy==1.14.0
 threadpoolctl==3.6.0
+tokenizers==0.22.1
+torch==2.2.2
 tqdm==4.67.1
+transformers==4.57.3
 typer-slim==0.20.0
 typing_extensions==4.15.0
 tzdata==2025.2
